--- a/BT2_LT.html
+++ b/BT2_LT.html
@@ -42,6 +42,7 @@
                             <p class="giagoc">Giá: 23.990.000đ  </p>
                             <p class="giam">Giảm: 3.000.000₫  </p>
                             <p class="gia">Còn: 20.990.000₫  </p>
+                            <a href="BT2_GioHang.html"><button id="dathang" type="button">Đặt Hàng</button></a>
                         </div>
                     </div>
                     <div class="sanpham1">
@@ -52,6 +53,7 @@
                             <p class="giagoc">Giá: 28.990.000₫  </p>
                             <p class="giam">Giảm: 3.000.000₫  </p>
                             <p class="gia">Còn: 25.990.000₫  </p>
+                            <a href="BT2_GioHang.html"><button id="dathang" type="button">Đặt Hàng</button></a>
                         </div>
                     </div>
                     <div class="sanpham1">
