--- a/BT2_GioHang.html
+++ b/BT2_GioHang.html
@@ -93,14 +93,16 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="../HTML/BT2.html" class="btn btn-warning"><i class="fa fa-angle-left"></i> Tiếp tục mua hàng</a>
+
+                        <a href="BT2.html" class="btn btn-warning"><i class="fa fa-angle-left">Tiếp tục mua hàng</i> </a>
                     </td>
                     <td colspan="3" class="hidden-xs" align="right"><strong>Tổng tiền:</strong></td>
                     <td class="hidden-xs text-center">
                         <strong>46.980.000 đ</strong>
                     </td>
                     <td>
-                        <a href="../HTML/BT3.html" class="btn btn-success btn-block">Đặt hàng<i class="fa fa-angle-right"></i></a>
+
+                        <a href="BT3.html" class="btn btn-success btn-block"><i class="fa fa-angle-right">Đặt hàng</i></a>
                     </td>
                 </tr>
             </tfoot>
