--- a/BT2_LT.html
+++ b/BT2_LT.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+    <script src="../JS/js2_timkiem.js"></script>
     <table class="bang1" border="1">
         <tr>
             <td width="20%" align="center">
