--- a/BT2.html
+++ b/BT2.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 <body>
+    <script src="../JS/js2_timkiem.js"></script>
     <table  class="bang1" border="1">
         <tr>
             <td width="20%" align="center">
